--- a/build.properties
+++ b/build.properties
@@ -1,1 +1,4 @@
 compc.exe = /Applications/FDTEnterprise/plugins/com.powerflasher.fdt.shippedflex_3.3.0.4852_1001/flex/bin/compc
+project.name=xrope
+ver.num=v0.3.1
+project.name.versioned=${project.name}-${ver.num}
